fix: Ajustes para swagger
